3단계 일정 목록 조회 기능 구현